# FFmpeg

./: .gitignore  build.gradle
app/: build.gradle
app/src/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ffmpeg/test/: MainActivity.java
app/src/main/jni/: Android.mk  simplest_ffmpeg_helloworld.c
app/src/main/jni/log/: log.c
app/src/main/jni/log/include/: log.h
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
